# Starfire-AgentTeam

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  README.zh-CN.md  bundle-compile.sh  docker-compose.infra.yml  docker-compose.yml  import-agent.sh  import-ecc.sh  railway.toml  render.yaml  setup-org.sh  setup_reno_stars.sh  test_a2a_e2e.sh  test_activity_e2e.sh  test_api.sh  test_claude_code_e2e.sh  test_comprehensive_e2e.sh
.awareness/: .first-run-done  index.db  index.db-shm  index.db-wal
.claude/: CLAUDE_LOOP_NOTES.md  settings.json
.githooks/: pre-commit
canvas/: Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
docs/: api-reference.md  architecture.md  ecosystem-research-outcomes.md  ecosystem-watch.md  index.md  known-issues.md  onboarding-interception.md  quickstart.md  remote-workspaces-readiness.md
infra/: litellm_config.yml
mcp-server/: README.md  jest.config.cjs  package-lock.json  package.json
org-templates/: reno-stars.yaml  starfire-dev.yaml
platform/: Dockerfile  go.mod  go.sum
scripts/: build-images.sh  claude-code-bridge.py  setup-default-org.sh  test-a2a-cross-runtime.sh  test-all-adapters.sh  test-all.sh  test-cross-agent-chat.sh  test-team-e2e.sh
sdk/python/: README.md  pyproject.toml
sdk/python/starfire_agent/: README.md  __init__.py  client.py
sdk/python/starfire_plugin/: __init__.py  __main__.py  builtins.py  channel.py  manifest.py  org.py  protocol.py  workspace.py
sdk/python/template/: plugin.yaml
sdk/python/template/adapters/: claude_code.py  deepagents.py
sdk/python/template/skills/example-skill/: SKILL.md
sdk/python/tests/: test_remote_agent.py  test_sdk.py  test_validators.py
workspace-claude-code/: Dockerfile  main.ts  package.json
workspace-template/: Dockerfile  a2a_cli.py  a2a_client.py  a2a_executor.py  a2a_mcp_server.py  a2a_tools.py  agent.py  agent_molecule_status.py  build-all.sh  (+19 more)
(+756 files in other folders)
